Updated Layout Issue on Profile page

--- a/resources/assets/sass/custom.sass
+++ b/resources/assets/sass/custom.sass
@@ -632,7 +632,7 @@ button[rel="delete"]
 		padding: 0 10px 20px						
 
 	.profile-img
-		float: left
+		float: right
 		padding-top: 20px	
 		position: relative
 		overflow: hidden
